# MultiDoodle

./: CMakeLists.txt  README.md
include/: Common.hpp  Parser.hpp  Platform.hpp  Player.hpp  Rectangle.hpp  Server.hpp
src/: Common.cpp  Doodle.cpp  DoodleServer.cpp  Parser.cpp  Platform.cpp  Player.cpp  Rectangle.cpp  Server.cpp
